syntax = "proto3";

package admin;
option go_package = "github.com/pachyderm/pachyderm/v2/src/admin";

import "google/protobuf/empty.proto";


message ClusterInfo {
  string id = 1;
  string deployment_id = 2;
}

service API {
  rpc InspectCluster(google.protobuf.Empty) returns (ClusterInfo) {}
}
